atomicka/css/index.css
/* ... */
/*************End of popup**************/
.heading_letter {
  background: #f2f2f2 none repeat scroll 0 0;
  font-family: "CenturyGothicBold", Arial;
  font-size: 50px;
  font-weight: bold;
  height: 60px;
  line-height: 63px;
  padding: 0 0 0 12px;
  width: 60px;
}
.bio_3_right_content {
  border: 20px solid #f2f2f2;
}
@media (min-width: 768px) {
  .bio_3_right_content {
    border: none;
  }
}
.bio_3_right_content > p {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
  padding: 30px 21px 0;
  text-align: justify;
}
@media (min-width: 768px) {
  .bio_3_right_content > p {
    font-family: century gothic;
    font-size: 15px;
    line-height: 2;
    padding: 35px 40px 0;
    text-align: justify;
  }
}
.bio_4_left_content > h3,
.bio_5_left_content > h3,
.bio_6_left_content > h3 {
  background: #f2f2f2 none repeat scroll 0 0;
  font-size: 50px;
  font-weight: bold;
  line-height: 61px;
  margin: 0;
  padding: 0 10px;
  position: absolute;
  right: 0;
  top: 0;
  width: auto;
}
@media (min-width: 768px) {
  .bio_4_left_content > h3,
  .bio_5_left_content > h3,
  .bio_6_left_content > h3 {
    background: #f2f2f2 none repeat scroll 0 0;
    font-size: 45px;
    font-weight: bold;
    line-height: 61px;
    margin: 0;
    padding: 0 10px;
    position: absolute;
    right: 0;
    top: 0;
  }
}
.bio_5_right_content > h3,.bio_6_right_content > h3 {
  font-size: 40px !important;
}
@media (min-width: 768px) {
  .bio_5_right_content > h3 ,.bio_6_right_content > h3 {
    font-size: 50px;
  }
}
.bio_4_right_content > h3,
.bio_5_right_content > h3,.bio_6_right_content > h3 {
  background: #f2f2f2 none repeat scroll 0 0;
  font-size: 50px;
  font-weight: bold;
  line-height: 61px;
  margin: 0;
  padding: 0 10px;
  position: absolute;
  right: 0px;
  top: 0;
}
@media (min-width: 768px) {
  .bio_4_right_content > h3,
  .bio_5_right_content > h3,  .bio_6_right_content > h3 {
    background: #f2f2f2 none repeat scroll 0 0;
    font-size: 50px;
    font-weight: bold;
    line-height: 61px;
    margin: 0;
    padding: 0 10px;
    position: absolute;
    right: 26px;
    top: 0;
  }
}
.bio_4_left_content > p {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
  text-align: justify;
  margin: 50px 0 0;
  padding: 20px;
}
@media (min-width: 768px) {
  .bio_4_left_content > p {
    font-family: century gothic;
    font-size: 15px;
    line-height: 2;
    text-align: justify;
    margin: 15px 0 0;
  }
}
.bio_5_left_content > p,.bio_6_left_content > p {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
  text-align: justify;
  margin: 50px 0 0;
  padding: 20px 20px 0px 20px;
}
@media (min-width: 768px) {
  .bio_5_left_content > p ,.bio_6_left_content > p{
    font-family: century gothic;
    font-size: 15px;
    line-height: 2;
    text-align: justify;
    margin: 16px 0 0;
  }
}
.bio_4_right_content > p,
.bio_5_right_content > p,.bio_6_right_content > p {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
  text-align: justify;
  margin: 50px 0 0;
  padding: 15px;
}
@media (min-width: 768px) {
  .bio_4_right_content > p,
  .bio_5_right_content > p,.bio_6_right_content > p {
    font-family: century gothic;
    font-size: 15px;
    line-height: 2;
    text-align: justify;
    margin: 36px 0 0;
    padding: 15px 16px 0px 40px;
  }
}
.bio_4_left_content > ul,
.bio_5_left_content > ul,.bio_6_left_content > ul {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
}
.bio_4_right_content > ul,
.bio_5_right_content > ul,.bio_6_right_content > ul  {
  font-family: century gothic;
  font-size: 15px;
  line-height: 2;
  width: 100%;
}
@media (min-width: 768px) {
  .bio_4_right_content > ul,
  .bio_5_right_content > ul,  .bio_6_right_content > ul {
    font-family: century gothic;
    font-size: 15px;
    line-height: 2;
    width: 50%;
    float: left;
  }
}
.bio_4_right_content,
.bio_5_right_content, .bio_6_right_content > ul {
  border: 20px solid #f2f2f2;
  background: #fff;
}
@media (min-width: 768px) {
  .bio_4_right_content,
  .bio_5_right_content,.bio_6_right_content > ul {
    padding: 24px 28px 0 0;
    border: none;
    background: #e9e9e9;
  }
}
.bio_3_left_content {
  border: none;
}
.content {
  font-family: Century Gothic;
  font-size: 15px;
  line-height: 2;
  text-align: justify;
}
.box_rotate {
  background-color: #ffffff;
  height: 52px;
  padding-bottom: 15px;
  padding-left: 20px;
  padding-top: 15px;
  width: 15%;
}
/*---------------------------End Bio graphy page-------------------------*/
/*--------------Start innovation page------------------------------*/
.section_holder_innovation {
  background: url('../images/crew.jpg') no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100% !important;
  width: 100% !important;
  z-index: -10000;
}
.content_heading_holder_inno {
  margin: 232px 0 0;
  text-align: center;
  width: 100%;
}
@media (min-width: 768px) {
  .content_heading_holder_inno {
    margin: 228px 0 0 110px;
    text-align: left;
  }
}
.content_heading_holder_inno h1 {
  font-family: "Open Sans", Semibold;
  font-size: 13px;
  padding: 0px;
  margin: 0px;
  line-height: 23px;
}
@media (min-width: 768px) {
  .content_heading_holder_inno h1 {
    font-family: "Open Sans", Semibold;
    font-size: 40px;
    padding: 0px;
    margin: 0px;
    line-height: 60px;
    font-weight: bold;
  }
}
.big_tagline3_inno {
  text-indent: 131px;
  font-size: 12px !important;
  line-height: 20px !important;
}
@media (min-width: 768px) {
  .big_tagline3_inno {
    text-indent: 252px;
    font-size: 26px !important;
    line-height: 0px !important;
  }
}
.inno_1_left {
  background: #fff;
}
@media (min-width: 768px) {
  .inno_1_left {
    background: #f2f2f2;
  }
}
.inno_1_left_content,
.inno_2_left_content,
.inno_4_left_content {
  background: #fff;
  padding: 0px ;
}
/* ... */

